--- a/Registration.html
+++ b/Registration.html
@@ -57,7 +57,7 @@
                      </td>
                     </tr>
                     <TR>
-                        <td colspan="2"><center><h3> <a href="file:///C:/Users/arunk/OneDrive/Documents/present.html" target="_blank">Return to Previous Page</a></h3></center></td>
+                        <td colspan="2"><center><h3> <a href="https://arunkumaruu.github.io/practice/present.html">Return to Previous Page</a></h3></center></td>
                     </TR>
 
                 </table>
